Make sure item count badge doesn't break in multiple lines

--- a/assets/js/blocks/cart-checkout/checkout/style.scss
+++ b/assets/js/blocks/cart-checkout/checkout/style.scss
@@ -85,6 +85,7 @@
 		right: 0;
 		top: $gap;
 		transform: translate(50%, -50%);
+		white-space: nowrap;
 		z-index: 1;
 	}
 
